# frand-property

./: Cargo.toml  README.md
frand-property-build/: Cargo.toml
frand-property-build/src/: generator.rs  lib.rs  parser.rs  scanner.rs
frand-property-macro/: Cargo.toml  LICENSE  README.md
frand-property-macro/src/: codegen_rust.rs  codegen_slint.rs  common.rs  lib.rs  parser.rs
frand-property-macro/src/model/: codegen_rust.rs  mod.rs  parser.rs
frand-property-macro/src/slint_model/: codegen_rust.rs  codegen_slint.rs  filegen_slint.rs  mod.rs  parser.rs
frand-property-slint/: Cargo.toml  README.md  build.rs  index.html
frand-property-slint/slint/: main.slint
frand-property-slint/slint/components/: adder.slint  adder_array.slint  adders.slint  repeater.slint
frand-property-slint/slint/global/: adder.slint  adders.slint  index.slint  repeater.slint  screen.slint
frand-property-slint/slint/screen/: screen.slint  start.slint
frand-property-slint/src/: adder.rs  adder_array.rs  adders.rs  lib.rs  main.rs  repeater.rs  screen.rs
frand-transceiver-slint/: Cargo.toml  build.rs
frand-transceiver-slint/slint/: main.slint
frand-transceiver-slint/slint/screen/: pay.slint  screen.slint  start.slint
frand-transceiver-slint/src/: main.rs
src/: event.rs  lib.rs  model.rs  notify_model.rs  property.rs  receiver_group.rs  slint_model.rs  stream.rs  system.rs  transceiver.rs
src/slint/: mod.rs  notify_model.rs  singleton.rs
tests/: model_test.rs  nested_model_test.rs  property_test.rs  receiver_group_test.rs  singleton_test.rs  stream_test.rs  string_test.rs  test_init.rs  test_nested_new_logic.rs  vis_test.rs
