[workspace]
members = ["frand-property-macro", "frand-property-slint"]
package.version = "0.3.1"
package.edition = "2021"
package.authors = ["frand-nano <frand.nano@gmail.com>"]

[package]
name = "frand-property"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = [ "slint" ]
slint = ["dep:slint"]

[dependencies]
frand-property-macro = { path = "frand-property-macro" }

slint = { version = "1.14", optional = true }
arraystring = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.48", features = ["rt", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }