[workspace]
members = ["frand-property-macro", "frand-property-slint", "frand-property-build"]
package.version = "0.3.5"
package.edition = "2021"
package.authors = ["frand-nano <frand.nano@gmail.com>"]

[package]
name = "frand-property"
version.workspace = true
edition.workspace = true
authors.workspace = true

[features]
default = [ "slint" ]
slint = ["dep:slint"]
slint-build = ["frand-property-macro/slint-build"]

[dependencies]
frand-property-macro = { path = "frand-property-macro" }

slint = { version = "1.14", optional = true }

arraystring = { version = "0.3", features = ["serde-traits"] }
async-trait = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.48", features = ["rt", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
