[package]
name = "frand-property-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro-error = "1.0"
proc-macro2 = "1.0"

[features]
slint-generate-global = []
