[package]
name = "frand-property-slint"
version.workspace = true
edition.workspace = true
authors.workspace = true

[build-dependencies]
slint-build = "1.14"

[dependencies]
frand-property = { path = ".." }
slint = "1.14"
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
log = "0.4"
simplelog = "0.12"