[package]
name = "frand-property-slint"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
slint-build = "1.14"
frand-property-build = { path = "../frand-property-build" }

[dependencies]
frand-property = { path = "..", features = ["slint-build"] }
slint = "1.14"

log = "0.4"
futures = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "time"] }
simplelog = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.48", features = ["rt", "macros", "time"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

